// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessLedger Snapshot Tests renders correctly for General role 1`] = `
<div
  class="process-ledger"
  data-expanded="false"
  data-role="general"
  data-testid="process-ledger"
>
  <div
    class="process-ledger-header"
  >
    <div
      class="process-ledger-title"
    >
      <span
        class="process-ledger-icon"
      >
        📋
      </span>
      <span
        class="process-ledger-label"
      >
        Process Ledger
      </span>
      <span
        class="process-ledger-duration"
      >
        (2099ms)
      </span>
    </div>
  </div>
  <div
    class="process-ledger-lines"
    data-testid="process-ledger-lines"
  >
    <div
      class="process-line status-success"
      data-index="0"
      data-status="success"
      data-testid="process-ledger-line-0"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          1.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Parse query
        </span>
        <span
          class="process-line-duration"
        >
          12ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-0-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="1"
      data-status="success"
      data-testid="process-ledger-line-1"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          2.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Retrieve candidates
        </span>
        <span
          class="process-line-duration"
        >
          245ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-1-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="2"
      data-status="success"
      data-testid="process-ledger-line-2"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          3.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Generate response
        </span>
        <span
          class="process-line-duration"
        >
          1.83s
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-2-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="3"
      data-status="success"
      data-testid="process-ledger-line-3"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          4.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Format output
        </span>
        <span
          class="process-line-duration"
        >
          8ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-3-details-toggle"
        >
          +
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessLedger Snapshot Tests renders correctly for Pro role 1`] = `
<div
  class="process-ledger"
  data-expanded="false"
  data-role="pro"
  data-testid="process-ledger"
>
  <div
    class="process-ledger-header"
  >
    <div
      class="process-ledger-title"
    >
      <span
        class="process-ledger-icon"
      >
        📋
      </span>
      <span
        class="process-ledger-label"
      >
        Process Ledger
      </span>
      <span
        class="process-ledger-duration"
      >
        (2099ms)
      </span>
    </div>
    <button
      aria-expanded="false"
      aria-label="Expand"
      class="process-ledger-expand-button"
      data-testid="process-ledger-expand-button"
    >
      <span
        class="process-ledger-arrow"
      >
        ▶
      </span>
      <span
        class="process-ledger-expand-label"
      >
        Expand
      </span>
    </button>
  </div>
  <div
    class="process-ledger-lines"
    data-testid="process-ledger-lines"
  >
    <div
      class="process-line status-success"
      data-index="0"
      data-status="success"
      data-testid="process-ledger-line-0"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          1.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Parse query
        </span>
        <span
          class="process-line-duration"
        >
          12ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-0-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="1"
      data-status="success"
      data-testid="process-ledger-line-1"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          2.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Retrieve candidates
        </span>
        <span
          class="process-line-duration"
        >
          245ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-1-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="2"
      data-status="success"
      data-testid="process-ledger-line-2"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          3.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Generate response
        </span>
        <span
          class="process-line-duration"
        >
          1.83s
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-2-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="3"
      data-status="success"
      data-testid="process-ledger-line-3"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          4.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Format output
        </span>
        <span
          class="process-line-duration"
        >
          8ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-3-details-toggle"
        >
          +
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessLedger Snapshot Tests renders correctly for Scholars role 1`] = `
<div
  class="process-ledger"
  data-expanded="false"
  data-role="scholars"
  data-testid="process-ledger"
>
  <div
    class="process-ledger-header"
  >
    <div
      class="process-ledger-title"
    >
      <span
        class="process-ledger-icon"
      >
        📋
      </span>
      <span
        class="process-ledger-label"
      >
        Process Ledger
      </span>
      <span
        class="process-ledger-duration"
      >
        (2099ms)
      </span>
    </div>
    <button
      aria-expanded="false"
      aria-label="Expand"
      class="process-ledger-expand-button"
      data-testid="process-ledger-expand-button"
    >
      <span
        class="process-ledger-arrow"
      >
        ▶
      </span>
      <span
        class="process-ledger-expand-label"
      >
        Expand
      </span>
    </button>
  </div>
  <div
    class="process-ledger-lines"
    data-testid="process-ledger-lines"
  >
    <div
      class="process-line status-success"
      data-index="0"
      data-status="success"
      data-testid="process-ledger-line-0"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          1.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Parse query
        </span>
        <span
          class="process-line-duration"
        >
          12ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-0-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="1"
      data-status="success"
      data-testid="process-ledger-line-1"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          2.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Retrieve candidates
        </span>
        <span
          class="process-line-duration"
        >
          245ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-1-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="2"
      data-status="success"
      data-testid="process-ledger-line-2"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          3.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Generate response
        </span>
        <span
          class="process-line-duration"
        >
          1.83s
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-2-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="3"
      data-status="success"
      data-testid="process-ledger-line-3"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          4.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Format output
        </span>
        <span
          class="process-line-duration"
        >
          8ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-3-details-toggle"
        >
          +
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessLedger Snapshot Tests renders correctly for Analytics role 1`] = `
<div
  class="process-ledger"
  data-expanded="false"
  data-role="analytics"
  data-testid="process-ledger"
>
  <div
    class="process-ledger-header"
  >
    <div
      class="process-ledger-title"
    >
      <span
        class="process-ledger-icon"
      >
        📋
      </span>
      <span
        class="process-ledger-label"
      >
        Process Ledger
      </span>
      <span
        class="process-ledger-duration"
      >
        (2099ms)
      </span>
    </div>
    <button
      aria-expanded="false"
      aria-label="Expand"
      class="process-ledger-expand-button"
      data-testid="process-ledger-expand-button"
    >
      <span
        class="process-ledger-arrow"
      >
        ▶
      </span>
      <span
        class="process-ledger-expand-label"
      >
        Expand
      </span>
    </button>
  </div>
  <div
    class="process-ledger-lines"
    data-testid="process-ledger-lines"
  >
    <div
      class="process-line status-success"
      data-index="0"
      data-status="success"
      data-testid="process-ledger-line-0"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          1.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Parse query
        </span>
        <span
          class="process-line-duration"
        >
          12ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-0-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="1"
      data-status="success"
      data-testid="process-ledger-line-1"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          2.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Retrieve candidates
        </span>
        <span
          class="process-line-duration"
        >
          245ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-1-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="2"
      data-status="success"
      data-testid="process-ledger-line-2"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          3.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Generate response
        </span>
        <span
          class="process-line-duration"
        >
          1.83s
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-2-details-toggle"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="process-line status-success"
      data-index="3"
      data-status="success"
      data-testid="process-ledger-line-3"
    >
      <div
        class="process-line-main"
      >
        <span
          class="process-line-index"
        >
          4.
        </span>
        <span
          class="process-line-status-icon"
        >
          ✓
        </span>
        <span
          class="process-line-step"
        >
          Format output
        </span>
        <span
          class="process-line-duration"
        >
          8ms
        </span>
        <button
          aria-expanded="false"
          aria-label="Show details"
          class="process-line-details-toggle"
          data-testid="process-ledger-line-3-details-toggle"
        >
          +
        </button>
      </div>
    </div>
  </div>
</div>
`;
